# antigravityLoose

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  run.sh
frontend/: app.js  index.html  style.css
migrations/: 20260421000000_init.sql
src/: main.rs
src/api/: mod.rs
src/core/: mod.rs
src/db/: mod.rs
src/models/: finding.rs  mod.rs  scan.rs
src/plugins/: dns.rs  http.rs  mod.rs  subdomain.rs  username.rs
