[package]
name = "antigravity_loose"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.9"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.32"
hickory-resolver = { version = "0.24.1", features = ["tokio"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid", "chrono", "json"] }
tokio = { version = "1.52.1", features = ["full"] }
tower = { version = "0.5.3", features = ["limit"] }
tower-http = { version = "0.6.8", features = ["fs", "cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
